<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bald_background"
    android:gravity="bottom|center"
    android:orientation="vertical">

    <com.bald.uriah.baldphone.views.BaldTitleBar
        android:id="@+id/bald_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:backgroundTint="@color/color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/dialer" />


    <TextView
        android:id="@+id/tv_number"
        style="@style/BackgroundText.Huge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialer_input_background"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrolling_helper"
        app:layout_constraintWidth_percent="0.95" />

    <include
        android:id="@+id/include"
        layout="@layout/dial_pad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number"
        app:layout_constraintVertical_weight="100" />

    <com.bald.uriah.baldphone.views.ScrollingHelper
        android:id="@+id/scrolling_helper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bald_title_bar"
        app:layout_constraintVertical_weight="@integer/dialer_suggestions_space">

        <com.bald.uriah.baldphone.views.ModularRecyclerView
            android:id="@+id/contacts_recycler_view"
            style="@style/ScrollStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <include
            android:id="@+id/empty_view"
            layout="@layout/add_contact" />
    </com.bald.uriah.baldphone.views.ScrollingHelper>

</androidx.constraintlayout.widget.ConstraintLayout>
