<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.bald.uriah.baldphone.views.BaldImageButton
        android:id="@+id/left_arrow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/style_for_buttons_transparent"
        app:srcCompat="@drawable/arrow_start_on_background" />

    <com.bald.uriah.baldphone.views.BaldImageButton
        android:id="@+id/right_arrow"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/style_for_buttons_transparent"
        app:srcCompat="@drawable/arrow_end_on_background" />

</LinearLayout>