...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toEndOf="@+id/short_presses"
        app:layout_constraintStart_toStartOf="@+id/long_presses"
        app:layout_constraintTop_toBottomOf="@+id/bald">


        <TextView
            android:id="@+id/textView3"
            style="@style/BackgroundText"
...
